--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/cli": "^4.2.1",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
